--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^3.0.0",
     "react-redux": "^5.1.1",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
